fixes Minimize size of the gallery covers so that four can be visible at a time

--- a/public/assets/css/custom.less
+++ b/public/assets/css/custom.less
@@ -3172,14 +3172,14 @@ img {
     .item-box{
       border: 1px solid rgba(61, 61, 61, 0.7);
     // opacity: 0.6;
-    display: inline-block;
-    background: #2d2d2d;
-    position: relative;
-    transition: all ease-in-out 0.3s;
-    cursor: pointer;
-    height: 290px;
-    overflow: hidden;
-    width: 325px;
+      display: inline-block;
+      background: #2d2d2d;
+      position: relative;
+      transition: all ease-in-out 0.3s;
+      cursor: pointer;
+      height: 290px;
+      overflow: hidden;
+      width: 23.8vw;
       // flex-basis: 25%;
       // border: 1px solid rgba(61,61,61,.7);
       // overflow: hidden;
@@ -3191,6 +3191,7 @@ img {
       // cursor: pointer;
       img{
         width: 100%;
+        height:100%;
         // opacity: .6;
       }
     }
